# ataraxia

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
ataraxia/: Cargo.toml
ataraxia-macros/: Cargo.toml
ataraxia-macros/src/: lib.rs
ataraxia-main/: Cargo.toml
ataraxia-main/src/: context.rs  http.rs  lib.rs  websocket.rs
ataraxia-main/src/models/: channel.rs  gateway.rs  id.rs  message.rs  mod.rs  ready.rs  server.rs  user.rs
ataraxia-main/src/models/gateway/: user.rs
ataraxia-voice/: Cargo.toml
ataraxia-voice/src/: lib.rs  vortex_socket.rs
ataraxia-voice/src/crypto/: mod.rs
ataraxia-voice/src/macros/: mod.rs
ataraxia-voice/src/models/: payloads.rs
ataraxia/macros/: Cargo.toml
ataraxia/macros/src/: command.rs  lib.rs
ataraxia/macros/src/command/: mod.rs  prefix.rs
ataraxia/src/: client.rs  context.rs  framework.rs  http.rs  lib.rs  websocket.rs
ataraxia/src/gateway/: shard.rs
ataraxia/src/models/: channel.rs  delta.rs  id.rs  message.rs  mod.rs  ready.rs  utils.rs
ataraxia/src/models/gateway/: channel.rs  emoji.rs  message.rs  mod.rs  server.rs
examples/: Cargo.toml  basic_bot.rs
src/: context.rs  framework.rs  http.rs  lib.rs  main.rs  websocket.rs
src/models/: message.rs
