[package]
name = "revoltchat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
url = "2.2.2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.21"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.67"
dotenv = "0.13.0"
tokio-tungstenite = { version = "0.17.1", default-features = false, features = ["native-tls", "connect"]}
async-trait = "0.1.51"
async-mutex = "1.4.0"

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt-multi-thread", "io-util"]
