[package]
name = "ataraxia-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for Ataraxia"
authors = ["rndrmu"]
repository = "https://github.com/rndrmu/ataraxia.git"
homepage = "https://github.com/rndrmu/ataraxia"
license = "BSD-3-Clause"

[lib]
proc-macro = true


[dependencies]
syn = "*"