[package]
name = "ataraxia-voice"
authors = ["rndrmu"]

version = "0.1.0"
edition = "2021"
description = "The Voice Implementation for Ataraxia"
publish = true
license = "BSD-3-Clause"
repository = "https://github.com/rndrmu/ataraxia.git"
homepage = "https://github.com/rndrmu/ataraxia"
keywords = ["ataraxia", "voice", "revolt", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
url = "2.2.2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.21"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.67"
dotenv = "0.13.0"
tokio-tungstenite = { version = "0.17.1", default-features = false, features = ["native-tls", "connect"]}
async-trait = "0.1.51"
rtp-rs = "0.6.0"
byteorder = "1.4.3"

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt-multi-thread", "io-util", "process"]

[dependencies.audiopus]
version = "0.3.0-rc.0"

[dependencies.symphonia]
version = "0.5"
git = "https://github.com/pdeljanov/Symphonia"
branch = "master"

[dependencies.symphonia-core]
version = "0.5"
git = "https://github.com/pdeljanov/Symphonia"
branch = "master"

[dependencies.symphonia-bundle-mp3]
version = "0.5"
git = "https://github.com/pdeljanov/Symphonia"
branch = "master"