[package]
name = "ataraxia"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rndrmu/ataraxia.git"
homepage = "https://github.com/rndrmu/ataraxia"
license = "BSD-3-Clause"
description = "A Rust Wrapper for the Revolt API"
readme = "../README.md"
keywords = ["revolt", "api"]
publish = true

[features]
voice = ["dep:ataraxia-voice"]

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
url = "2.2.2"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.21"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.67"
dotenv = "0.13.0"
tokio-tungstenite = { version = "0.17.1", default-features = false, features = ["native-tls", "connect"]}
async-trait = "0.1.51"
tower = { version = "0.4.12", features = ["full"]}
tracing = "0.1.34"

# for the revolt vortex voice chat 
ataraxia-voice = { path = "../ataraxia-voice", optional = true }

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt-multi-thread", "io-util"]
