[package]
name = "ataraxia-examples"
version = "0.0.0"
publish = false
authors = ["rndrmu"]
edition = "2021"

[dependencies]
ataraxia = { path = "../ataraxia" }
dotenv = "0.13.0"
tracing-subscriber = "0.3.11"

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt-multi-thread", "io-util"]

[[example]]
name = "ping-pong-bot"
path = "./basic_bot.rs"