[package]
name = "ataraxia-examples"
version = "0.0.0"
publish = false
authors = ["rndrmu"]
edition = "2021"

[dependencies]
dotenv = "0.13.0"
tracing-subscriber = "0.3.11"
serde_json = "1.0.67"

[dependencies.ataraxia]
path = "../ataraxia"

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt-multi-thread", "io-util"]

[[example]]
name = "devbot"
path = "./basic_bot.rs"